5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1643_869.log
== TEST (2019-04-08 23:01:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ", p*0,95 )
else:
	print( "valor a pagar: ", p)
	
-- OUTPUT:
valor a pagar:  0.0 95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:03:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p*0.95 )
else:
	print( "valor a pagar: ", p)
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:03:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p*0.95 )
else:
	print( "valor a pagar: ", p)
	
-- EXECUTION TIME:
0.141503
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
valor a pagar:  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
valor a pagar:  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:04:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print( "valor a pagar: ", p)
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:05:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print( "valor a pagar: ", p)
	
-- EXECUTION TIME:
0.157612
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
valor a pagar:  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
valor a pagar:  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:13:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print( "valor a pagar: ", p)
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:14:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print( round "valor a pagar: "(p,2))
	
-- ERROR:
File "XXXX", line 8
    print( round "valor a pagar: "(p,2))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:15:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print( "valor a pagar: " round (p,2))
	
-- ERROR:
File "XXXX", line 8
    print( "valor a pagar: " round (p,2))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:15:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print( round ("valor a pagar: " p,2))
	
-- ERROR:
File "XXXX", line 8
    print( round ("valor a pagar: " p,2))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:15:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print(round(p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:16:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print(round(p,2))
	
-- EXECUTION TIME:
0.125466
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
valor a pagar:  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
valor a pagar:  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:16:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print(round(p,2))
	
-- EXECUTION TIME:
0.118037
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
valor a pagar:  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
valor a pagar:  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:16:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p-p*0.05 )
else:
	print(round(p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:19:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - p*0.05 )
else:
	print(round(p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:19:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round(p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:22:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print((round p,2))
	
-- ERROR:
File "XXXX", line 8
    print((round p,2))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:22:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- OUTPUT:
valor a pagar:  190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:24:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( "valor a pagar: ",p - (p*0.05) )
else:
	print(round (p,2))
	
-- EXECUTION TIME:
0.22234
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
valor a pagar:  190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
valor a pagar:  190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:27:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p=float(input("valor da compra: "))
if(p>=200):
	print( round ((p - (p*0.05)),2) )
else:
	print(round (p,2))
	
-- EXECUTION TIME:
0.16091
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
